[gd_scene load_steps=2 format=3 uid="uid://copipsolfblhc"]

[ext_resource type="Script" uid="uid://b6xnfsrp5yyhi" path="res://Scenes/UI/HUD/Inventary/item_slot.gd" id="1_m4bdr"]

[node name="ItemSlot" type="Panel"]
custom_minimum_size = Vector2(60, 60)
script = ExtResource("1_m4bdr")

[node name="ItemButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(54, 54)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.0
offset_right = 26.0
offset_bottom = 55.0
grow_horizontal = 2
ignore_texture_size = true
stretch_mode = 5

[node name="ItemAmount" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -22.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
horizontal_alignment = 2
vertical_alignment = 2
